--- a/layouts/shortcodes/fontawesome.html
+++ b/layouts/shortcodes/fontawesome.html
@@ -1,5 +1,5 @@
 <span class="inline-svg" >
-{{- $fname:=print "fontawesome/" ( .Get 0 ) ".svg" -}}
+{{- $fname:=print "fontawesome/" ( .Get 0 ) ".png" -}}
 {{- $path:="<path" -}}
 {{- $fill:="<path fill=\"currentColor\"" -}}
 {{ replace (readFile $fname) $path $fill | safeHTML }}
