--- a/layouts/shortcodes/fontawesome.html
+++ b/layouts/shortcodes/fontawesome.html
@@ -1,6 +1,6 @@
 <span class="inline-svg" >
 {{- $fname:=print "fontawesome/" ( .Get 0 ) ".svg" -}}
 {{- $path:="<path" -}}
-{{- $fill:="<path fill=\"#212121\"" -}}
+{{- $fill:="<path fill=\"currentColor\"" -}}
 {{ replace (readFile $fname) $path $fill | safeHTML }}
 </span>
