--- a/exampleSite/content/results/cancer/style.css
+++ b/exampleSite/content/results/cancer/style.css
@@ -17,8 +17,11 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .main-container {
-  max-width: 1280px;
+  max-width: 1800px;
+  margin-left: auto;
+  margin-right: auto;
 }
+
 
 
 /* Two-column layout */
