--- a/exampleSite/content/results/cancer/style.css
+++ b/exampleSite/content/results/cancer/style.css
@@ -16,12 +16,18 @@ h1,h2,h3,h4,h5,h6{
   font-family: 'Yanone Kaffeesatz';
 }
 
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
+}
+
 .main-container {
   max-width: 1800px;
   margin-left: auto;
   margin-right: auto;
 }
-
 
 
 /* Two-column layout */
