--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -77,6 +77,11 @@
     <main class="wrapper">
       {{ partial "header.html" . }}
 
+      <div class="header">
+      <h1>{{ .Site.Title }}</h1>
+      <img style="position: absolute; top:24px; right: 32px" src="/images/logo.png" alt="maibennett logo" />
+      </div>
+
       <div class="content">
         {{ block "content" . }}{{ end }}
       </div>
