--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -79,7 +79,7 @@
 
       <div class="header">
       <h1>{{ .Site.Title }}</h1>
-      <img style="position: absolute; top:24px; right: 32px" src="/images/logo.png" alt="maibennett logo" />
+      <img style="position: absolute; top:24px; right: 32px" src="/images/logo.PNG"/>
       </div>
 
       <div class="content">
