--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,11 @@
-{{ define "title" }}
-  {{ .Title }} · {{ .Site.Title }}
-{{ end }}
-{{ define "content" }}
-  {{ partial "page.html" . }}
-{{ end }}
+{ partial "header.html" . }}
+    
+<div class="header">
+  <h1>{{ .Site.Title }}</h1>
+  <img style="position: absolute; top:24px; right: 32px" src="/images/logo.png" alt="maibennett" />
+</div>
+<div class="content">
+  {{ .Content }}
+</div>
+
+{{ partial "footer.html" . }}
