--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
   <section class="container">
     {{ template "_internal/google_analytics.html" . }}
     <a class="navigation-title" href="{{ .Site.BaseURL | absLangURL }}">
-      <img src="/images/maibennett_logo.png">
+      <img src="/images/maibennett_logo.png" href="https://www.magdalenabennett.com">
     </a>
     <input type="checkbox" id="menu-toggle" />
     <label class="menu-button float-right" for="menu-toggle"><i class="fas fa-bars"></i></label>
