--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,6 +1,6 @@
 // Fonts
-$text-font-family: Merriweather, Georgia, serif;
-$heading-font-family: Lato, Helvetica, sans-serif;
+$text-font-family: Jost, sans-serif;
+$heading-font-family: Jost, sans-serif;
 $code-font-family: 'Source Code Pro', 'Lucida Console', monospace;
 
 // Colors
