--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,7 @@
 <nav class="navigation">
   <section class="container">
     {{ template "_internal/google_analytics.html" . }}
+    <link href='http://fonts.googleapis.com/css?family=Jost' rel='stylesheet' type='text/css'>
     <a class="navigation-title" href="{{ .Site.BaseURL | absLangURL }}">
       <img src="/images/maibennett_logo.png" height="60" href="https://www.magdalenabennett.com">
     </a>
