--- a/layouts/shortcodes/expand.html
+++ b/layouts/shortcodes/expand.html
@@ -1,6 +1,16 @@
-<details {{ if or (.Get "open") (in .Params "open") }}open{{ end }}>
-  <summary>{{ cond .IsNamedParams (.Get "title") (.Get 0) }}</summary>
-  <div class="markdown-inner">
-    {{ .Inner | markdownify }}
-  </div>
-</details>
+<div class="expand">
+    <div class="expand-label" style="cursor: pointer;" onclick="$h = $(this);$h.next('div').slideToggle(100,function () {$h.children('i').attr('class',function () {return $h.next('div').is(':visible') ? 'fa fa-chevron-down' : 'fa fa-chevron-right';});});">
+        <i style="font-size:x-small;" class="fa fa-chevron-right"></i>
+        <span>
+        {{$expandMessage := T "Expand-title"}}
+        {{ if .IsNamedParams }}
+        {{.Get "default" | default $expandMessage}}
+        {{else}}
+        {{.Get 0 | default $expandMessage}}
+        {{end}}
+        </span>
+    </div>
+    <div class="expand-content" style="display: none;">
+{{.Inner | safeHTML}}
+    </div>
+</div>
