--- a/layouts/shortcodes/expand.html
+++ b/layouts/shortcodes/expand.html
@@ -1,5 +1,5 @@
 <details {{ if or (.Get "open") (in .Params "open") }}open{{ end }}>
-  <summary><i style="font-size:x-small;" class="fa fa-chevron-right"></i>{{ cond .IsNamedParams (.Get "title") (.Get 0) }}</summary>
+  <summary><i style="font-size:x-small;" class="fa fa-chevron-right"></i>{{ (.Get "title") (.Get 0) }}</summary>
   <div class="markdown-inner">
     {{ .Inner | markdownify }}
   </div>
