--- a/layouts/shortcodes/expand.html
+++ b/layouts/shortcodes/expand.html
@@ -1,4 +1,4 @@
-<details {{ if or (.Get "open") (in .Params "open") }}open{{ end }} <i class="fas fa-bars"></i>>
+<details {{ if or (.Get "open") (in .Params "open") }}open{{ end }} ><i class="fas fa-bars"></i>
   <p>{{ cond .IsNamedParams (.Get "title") (.Get 0) }}</p>
   <div class="markdown-inner">
     {{ .Inner | markdownify }}
