--- a/layouts/shortcodes/expand.html
+++ b/layouts/shortcodes/expand.html
@@ -13,7 +13,12 @@ details>summary::-webkit-details-marker {
 }
 
 details>summary::before {
-  content: '+ ';
+  font-family: FontAwesome;
+  content: "\f147";
+  left:0;
+  position:absolute;
+  top:0;
+
 }
 
 details[open]>summary::before {
