--- a/layouts/shortcodes/expand.html
+++ b/layouts/shortcodes/expand.html
@@ -13,7 +13,7 @@ details>summary::-webkit-details-marker {
 }
 
 details>summary::before {
-  font-family: "Font Awesome";
+  font-family: "fa solid";
   content: "\f147";
   left:0;
   position:absolute;
