--- a/layouts/shortcodes/expand.html
+++ b/layouts/shortcodes/expand.html
@@ -1,3 +1,7 @@
+<head>
+<meta charset="UTF-8">
+</head>
+
 <style>
 details>summary {
   list-style-type: none;
@@ -13,8 +17,7 @@ details>summary::-webkit-details-marker {
 }
 
 details>summary::before {
-  font-family: "fa solid";
-  content: "\f147";
+  content: "&#128512;";
   left:0;
   position:absolute;
   top:0;
