--- a/layouts/shortcodes/expand.html
+++ b/layouts/shortcodes/expand.html
@@ -1,27 +1,10 @@
-<head>
-<meta charset="UTF-8">
-</head>
-
 <style>
-details>summary {
-  list-style-type: none;
-  outline: none;
-  cursor: pointer;
-  border: 1px solid #eee;
-  padding: 5px;
-  border-radius: 5px;
-}
-
 details>summary::-webkit-details-marker {
   display: none;
 }
 
 details>summary::before {
-  content: "&#128512;";
-  left:0;
-  position:absolute;
-  top:0;
-
+  content: "+";
 }
 
 details[open]>summary::before {
