--- a/layouts/shortcodes/expand.html
+++ b/layouts/shortcodes/expand.html
@@ -1,4 +1,13 @@
 <style>
+details>summary {
+  list-style-type: none;
+  outline: none;
+  cursor: pointer;
+  border: 0px solid #eee;
+  padding: 5px;
+  border-radius: 5px;
+}
+
 details>summary::-webkit-details-marker {
   display: none;
 }
