--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -63,7 +63,7 @@
       <link rel="stylesheet" href="{{ . | relURL }}">
     {{ end }}
 
-    <link rel="icon" type="image/ico" href="{{ .Site.Params.favicon_32 | default "/images/favicon.ico" | absURL }}" sizes="32x32">
+    <link rel="icon" type="image/png" href="{{ .Site.Params.favicon_32 | default "/images/favicon-32x32.png" | absURL }}" sizes="32x32">
     <link rel="icon" type="image/ico" href="{{ .Site.Params.favicon_16 | default "/images/favicon.ico" | absURL }}" sizes="16x16">
 
     {{ range .AlternativeOutputFormats -}}
