--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -8,7 +8,7 @@ $bg-color: #FAFAFA !default;
 $fg-color: #212121 !default;
 $alt-bg-color: #E0E0E0 !default;
 $alt-fg-color: #000 !default;
-$link-color: #2d9bd6 !default;
+$link-color: #2b8fc4 !default;
 
 // Colors inverted
 $bg-color-inverted: #212121 !default;
