--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -61,7 +61,8 @@
 .avatar img{
   width: 20rem;
   height: auto;
-  border-radius: 50%;
+  #border-radius: 50%;
+  border-radius: 15%;
   @media only screen and (max-width : 768px) {
     width: 10rem;
   }
