--- a/layouts/shortcodes/expand.html
+++ b/layouts/shortcodes/expand.html
@@ -6,6 +6,7 @@ details>summary {
   border: 0px solid #eee;
   padding: 2px;
   border-radius: 10px;
+  width: 40%;
 }
 
 details>summary::-webkit-details-marker {
